--- a/html/index.html
+++ b/html/index.html
@@ -226,28 +226,29 @@
     </div>
   </div>
 
-<div class="wrapper">
-  <div class="Grid Grid--gutters">
-    <div class="Grid-cell">
-      <div class="row">
-        <div class="widthMax">
-          <div class="element">
-            <strong>
-              <div class="intro aos-init aos-animate" data-aos="fade-up">           
-                <h1> I'm a UX Designer passionate about creating simple, smooth and engaging experiences. </h1>
-              </div>
-            </strong>
+  <div class="wrapper">
+    <div class="Grid Grid--gutters">
+      <div class="Grid-cell">
+        <div class="row">
+          <div class="widthMax">
+            <div class="element">
+              <strong>
+                <div class="intro aos-init aos-animate" data-aos="fade-up">
+                  <h1> I'm a UX Designer passionate about creating simple, smooth and engaging experiences. </h1>
+                </div>
+              </strong>
+            </div>
           </div>
-        </div>
-        <div class="paddingleft">
-          <div class="element">
-            <div class="widthFitContent">
-              <div class="dropdownSM">
-                <img title="Share" class="iconS hoverGrey300 paddingM borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
-                <div class="dropdownSM-content">
-                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
-                    on LinkedIn</a>
-                  <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&amp;media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&amp;description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
+          <div class="paddingleft">
+            <div class="element">
+              <div class="widthFitContent">
+                <div class="dropdownSM">
+                  <img title="Share" class="iconS hoverGrey300 paddingM borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
+                  <div class="dropdownSM-content">
+                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
+                      on LinkedIn</a>
+                    <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&amp;media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&amp;description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -255,54 +256,55 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="Grid Grid--gutters Grid--cols-8 ">
-    <div class="Grid-cell">
-      <div class="ClipboardBoxIconOnly">
-        <button class="ClipboardIconOnly">
-          <img title="Copy Email to Clipboard" class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
-          <p class="clickIconCopy">vickyw.design@gmail.com</p>
-        </button>
+    <div class="Grid Grid--gutters Grid--cols-8 ">
+      <div class="Grid-cell">
+        <div class="ClipboardBoxIconOnly">
+          <button class="ClipboardIconOnly">
+            <img title="Copy Email to Clipboard" class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
+            <p class="clickIconCopy">vickyw.design@gmail.com</p>
+          </button>
+        </div>
+
+      </div>
+      <div class="Grid-cell">
+        <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
+          <img class="iconM hoverGrey300 paddingMax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
+        </a>
       </div>
 
-    </div>
-    <div class="Grid-cell">
-      <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-        <img class="iconM hoverGrey300 paddingMax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
-      </a>
+      <div class="Grid-cell">
+        <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
+          <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
+        </a>
+      </div>
+      <div class="Grid-cell">
+        <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
+          <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+        </a>
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
     </div>
 
-    <div class="Grid-cell">
-      <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
-        <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
-      </a>
-    </div>
-    <div class="Grid-cell">
-      <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
-        <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
-      </a>
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
   </div>
-
-</div>
   <div class="wrapper">
+
+
     <div class="Grid Grid--gutters Grid--cols-3">
       <a href="/resume" target="_blank"> <button class="buttonLanding arrButtonResume">Resume &nbsp;
         </button></a>
@@ -332,7 +334,49 @@
   <!-- Arrow -->
   <!-- Content -->
   <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--cols-3">
+
+      <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
+    <a class="no-hover-effect">
+      <div class="">
+        <div class="img__wrap">
+          <img class="img__img" alt="Enhancing Appointment Management for BookYourPet SaaS Platform" src="/projectImages/Cover_BYP_ApptManagement.png" />
+          <div class="img__description">
+            <div class="input-field">
+              <div class="column">
+                <label for="booking_management">
+                  <h5>Password</h5>
+                </label>
+
+                <div class="pwContainer">
+                  <input class="PWinput psJS" type="password" id="booking_management" placeholder="Enter password">
+                  <button class="passwordArr" type="submit">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Enhancing Appointment Management for BookYourPet SaaS Platform">
+                  </button>
+                </div>
+                <div class="pwIncorrectHeight">
+                  <span id="pwIncorrect">Password is incorrect </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="element">
+            <div class="element">
+              <h5>Password is required</h5>
+              <h3 class="arrCard"><strong>Enhancing Appointment Management for BookYourPet SaaS Platform
+                </strong></h3>
+              <h4>I led the redesign of the appointment details screen for a pet booking app, aiming to improve usability, streamline management, and enhance efficiency. Using user interviews, usability testing, and data analysis, we identified key areas for improvement: easier navigation, better visibility of pet and client info, and efficient appointment adjustments. The redesigned screen features simplified navigation, enhanced visual hierarchy, and quick-access management tools, resulting in a 30% increase in user satisfaction and a 40% reduction in time spent managing appointments. This case study highlights my ability to solve complex usability issues and deliver impactful design solutions.
+              </h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </a>
+</div>
+    </div>
+
     <div class="Grid Grid--gutters Grid--cols-2">
+
 
       <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
     <a class="no-hover-effect">
@@ -400,7 +444,7 @@
               <h5>Password is required</h5>
               <h3 class="arrCard"><strong>B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service
                 </strong></h3>
-              <h4>Discover how we transformed the BookYourPet app with a strategic redesign, shifting from a white-glove service to a user-friendly self-service platform. This overhaul focused on enhancing key features, resulting in a significant 45% increase in user satisfaction and a more streamlined experience for pet owners. Join us on our journey to revolutionize pet care services with a seamless and intuitive booking experience.
+              <h4>Discover how we transformed the pet booking app with a strategic redesign, shifting from a white-glove service to a user-friendly self-service platform. This overhaul focused on enhancing key features, resulting in a significant 45% increase in user satisfaction and a more streamlined experience for pet owners. Join us on our journey to revolutionize pet care services with a seamless and intuitive booking experience.
       
               </h4>
             </div>
@@ -450,7 +494,7 @@
     </a>
 </div>
         -->
-        <div class="Grid-cell cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
+      <div class="Grid-cell cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
@@ -577,10 +621,8 @@
 
 
     </div>
-    <div class="Grid Grid--gutters Grid--full">
 
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-3">
+    <div class="Grid Grid--gutters Grid--cols-2">
 
       <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder SEER paddingNone marginXS">
   <a class="no-hover-effect" href="/seer/">
