--- a/html/index.html
+++ b/html/index.html
@@ -288,7 +288,7 @@
     <div class="Grid Grid--gutters Grid--cols-3">
       <a href="/resume" target="_blank"> <button class="buttonLanding arrButtonResume">Resume &nbsp;
         </button></a>
-      <a href="/about"> <button class="buttonLanding arrButton">About me &nbsp;
+      <a href="#aboutme"> <button class="buttonLanding arrButton">About me &nbsp;
         </button></a>
     </div>
   </div>
@@ -305,7 +305,7 @@
             <div class="Grid-cell">
                 <div class="element">
                     <h2 class="tArrow">
-                        UX Case Study <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
+                        Projects <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
                     </h2>
                 </div>
             </div>
@@ -318,46 +318,7 @@
     <div class="blankHXS"></div>
 
     <div class="wrapper">
-      <div class="Grid Grid--gutters Grid--cols-3">
 
-        <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
-    <a class="no-hover-effect">
-      <div class="">
-        <div class="img__wrap">
-          <img class="img__img" alt="Enhancing Appointment Management for BookYourPet SaaS Platform" src="/projectImages/Cover_BYP_ApptManagement.png" />
-          <div class="img__description">
-            <div class="input-field">
-              <div class="column">
-                <label for="booking_management">
-                  <h5>Password</h5>
-                </label>
-
-                <div class="pwContainer">
-                  <input class="PWinput psJS" type="password" id="booking_management" placeholder="Enter password">
-                  <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Enhancing Appointment Management for BookYourPet SaaS Platform">
-                  </button>
-                </div>
-                <div class="pwIncorrectHeight">
-                  <span id="pwIncorrect">Password is incorrect </span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="element">
-            <div class="element">
-              <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>Enhancing Appointment Management for BookYourPet SaaS Platform
-                </strong></h3>
-              <h4>I led the redesign of the appointment details screen for a pet booking app, aiming to improve usability, streamline management, and enhance efficiency. Using user interviews, usability testing, and data analysis, we identified key areas for improvement: easier navigation, better visibility of pet and client info, and efficient appointment adjustments. The redesigned screen features simplified navigation, enhanced visual hierarchy, and quick-access management tools, resulting in a 30% increase in user satisfaction and a 40% reduction in time spent managing appointments. This case study highlights my ability to solve complex usability issues and deliver impactful design solutions.
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
-</div>
-      </div>
 
       <div class="Grid Grid--gutters Grid--cols-2">
 
