--- a/html/index.html
+++ b/html/index.html
@@ -319,7 +319,46 @@
 
     <div class="wrapper">
 
+      <div class="Grid Grid--gutters Grid--cols-3">
 
+        <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
+    <a class="no-hover-effect">
+      <div class="">
+        <div class="img__wrap">
+          <img class="img__img" alt="Enhancing Appointment Management for BookYourPet SaaS Platform" src="/projectImages/Cover_BYP_ApptManagement.png" />
+          <div class="img__description">
+            <div class="input-field">
+              <div class="column">
+                <label for="booking_management">
+                  <h5>Password</h5>
+                </label>
+
+                <div class="pwContainer">
+                  <input class="PWinput psJS" type="password" id="booking_management" placeholder="Enter password">
+                  <button class="passwordArr" type="submit">
+                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Enhancing Appointment Management for BookYourPet SaaS Platform">
+                  </button>
+                </div>
+                <div class="pwIncorrectHeight">
+                  <span id="pwIncorrect">Password is incorrect </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="element">
+            <div class="element">
+              <h5>Password is required</h5>
+              <h3 class="arrCard"><strong>Enhancing Appointment Management for BookYourPet SaaS Platform
+                </strong></h3>
+              <h4>I led the redesign of the appointment details screen for a pet booking app, aiming to improve usability, streamline management, and enhance efficiency. Using user interviews, usability testing, and data analysis, we identified key areas for improvement: easier navigation, better visibility of pet and client info, and efficient appointment adjustments. The redesigned screen features simplified navigation, enhanced visual hierarchy, and quick-access management tools, resulting in a 30% increase in user satisfaction and a 40% reduction in time spent managing appointments. This case study highlights my ability to solve complex usability issues and deliver impactful design solutions.
+              </h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </a>
+</div>
+      </div>
       <div class="Grid Grid--gutters Grid--cols-2">
 
 
@@ -399,45 +438,19 @@
     </a>
 </div>
       </div>
+
+
+
       <div class="Grid Grid--gutters Grid--cols-2">
-
-
-        <div class="Grid-cell cardBottomBorder LASO float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
-    <a class="no-hover-effect">
-      <div class="">
-        <div class="img__wrap">
-          <img class="img__img" alt="Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero" src="/projectImages/Cover_LASO_RXZero.png" />
-          <div class="img__description">
-            <div class="input-field">
-              <div class="column">
-                <label for="rxZero">
-                  <h5>Password</h5>
-                </label>
-
-                <div class="pwContainer">
-                  <input class="PWinputLH psJS" type="password" id="rxZero" placeholder="Enter password">
-                  <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero">
-                  </button>
-                </div>
-                <div class="pwIncorrectHeight">
-                  <span id="pwIncorrect">Password is incorrect </span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="element">
-            <div class="element">
-              <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero
-                </strong></h3>
-              <h4>This case study delves into LASO Health&#39;s strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
+        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder LASO paddingNone marginXS">
+  <a class="no-hover-effect" href="/refining_rx_zero/">
+    <img src="/projectImages/Cover_LASO_RXZero.png" alt="Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero">
+    <div class="element">
+      <h3 class="arrCard"><strong>Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero</strong></h3>
+      <h4>This case study delves into LASO Health&#39;s strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.
+      </h4>
+    </div>
+  </a>
 </div>
 
       </div>
@@ -824,11 +837,11 @@
     <div class="blankHXS"></div>
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-3">
-  
+
         <div class="Grid-cell  cardBorderThick borderRadiusM  paddingNone marginXS">
           <div class="element">
             <div class="element">
-  
+
               <h2 data-aos="fade-up"> <strong> Understanding Users and Products</strong> </h2>
               <h3>In my view, a deep understanding of both business goals and user needs is fundamental to UX design. By prioritizing these aspects, I'm able to create immersive user experiences that truly resonate. This dual focus is crucial in ensuring that my design projects have a meaningful impact. It also aids in the planning and prioritization process, ensuring that we focus on what matters most.
               </h3>
@@ -840,7 +853,7 @@
             <div class="element">
               <h2 data-aos="fade-up"> <strong> Building Strong Cross-Functional Partnerships </strong> </h2>
               <h3>I transform ambiguous projects into articulated plans, ensuring cross-functional alignment throughout the process. By setting early deadlines and establishing feedback loops for each milestone, I encourage timely feedback and iterative improvement. Collaborating closely with various teams, I enhance both the value and validity of research, leading to more informed and impactful design decisions.
-  
+
               </h3>
             </div>
           </div>
@@ -850,20 +863,19 @@
             <div class="element">
               <h2 data-aos="fade-up"> <strong> Managing the Design Process </strong> </h2>
               <h3>Throughout each phase of the design process, from planning research to iterating designs and delivering high-quality final products, my focus is on maintaining a feedback loop to continuously refine and improve the design. I ensure that each phase has a clear deadline to keep the project on track. By documenting each iteration and evaluating the strengths and weaknesses of each iteration, I aim to build a more effective and impactful design.
-  
-  
+
+
               </h3>
             </div>
-  
+
           </div>
         </div>
       </div>
-  
-  
+
+
     </div>
-  </section>
-  <!-- Arrow -->
-  
+    <!-- Arrow -->
+    
 
 
     <div class="blankHS"></div>
@@ -881,8 +893,8 @@
     <div class="blankHXS"></div>
     
 
-  <!-- Arrow -->
-  <div class="blankHM"></div>
+    <!-- Arrow -->
+    <div class="blankHM"></div>
 <div class="Grid Grid--full Grid--gutters u-textCenter">
     <ul class="tags" id="TagsCloud">
 
@@ -932,6 +944,8 @@
     </ul>
   </div>
   <div class="blankHM"></div>
+
+  </section>
 
   
 
