--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -185,7 +185,7 @@
   <header>
     <nav class="header" id="header">
       <div class="backgroundColorNav">
-        <a href="/about" class="marginS centerVer pointer Grid--center"> 
+        <a href="/" class="marginS centerVer pointer Grid--center"> 
           <div class="arrow-container moveBackArrow">
             <div class="left-arrow "></div>
          </div>
