url + sitemap fix

--- a/html/glorify/index.html
+++ b/html/glorify/index.html
@@ -5301,8 +5301,8 @@
 
 
                 <div class="blankHXXS"></div>
-                <a href="/savings_explorer/">
-                  <h6 class="fontWeight400"> RX Zero Savings Explorer</h6>
+                <a href="/savings_calculator/">
+                  <h6 class="fontWeight400"> Savings Calculator</h6>
 
                 </a>
                 <h6>Uncover Prescription Meds Savings</h6>
