--- a/html/index.html
+++ b/html/index.html
@@ -498,10 +498,10 @@
         -->
 
         <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder LASO paddingNone marginXS">
-  <a class="no-hover-effect" href="/savings_explorer/">
-    <img src="/projectImages/Cover_LASO_CostCalculator.png" alt="RX Zero Savings Explorer: Uncover Prescription Meds Savings">
+  <a class="no-hover-effect" href="/savings_calculator/">
+    <img src="/projectImages/Cover_LASO_CostCalculator.png" alt="RX Zero Savings Calculator: Uncover Prescription Meds Savings">
     <div class="element">
-      <h3 class="arrCard"><strong>RX Zero Savings Explorer: Uncover Prescription Meds Savings</strong></h3>
+      <h3 class="arrCard"><strong>RX Zero Savings Calculator: Uncover Prescription Meds Savings</strong></h3>
       <h4>This tool enables users to compare their current medication costs with the RX Zero subscription model, offering a seamless experience that simplifies making healthcare financial decisions.
       </h4>
     </div>
@@ -974,8 +974,8 @@
 
 
                 <div class="blankHXXS"></div>
-                <a href="/savings_explorer/">
-                  <h6 class="fontWeight400"> RX Zero Savings Explorer</h6>
+                <a href="/savings_calculator/">
+                  <h6 class="fontWeight400"> Savings Calculator</h6>
 
                 </a>
                 <h6>Uncover Prescription Meds Savings</h6>
