--- a/html/index.html
+++ b/html/index.html
@@ -318,126 +318,28 @@
     <div class="blankHXS"></div>
 
     <div class="wrapper">
-    <!-- <div class="Grid Grid--gutters Grid--cols-3">
-
-        <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
-    <a class="no-hover-effect">
-      <div class="">
-        <div class="img__wrap">
-          <img class="img__img" alt="Enhancing Appointment Management for BookYourPet SaaS Platform" src="/projectImages/Cover_BYP_ApptManagement.png" />
-          <div class="img__description">
-            <div class="input-field">
-              <div class="column">
-                <label for="booking_management">
-                  <h5>Password</h5>
-                </label>
-
-                <div class="pwContainer">
-                  <input class="PWinput psJS" type="password" id="booking_management" placeholder="Enter password">
-                  <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Enhancing Appointment Management for BookYourPet SaaS Platform">
-                  </button>
-                </div>
-                <div class="pwIncorrectHeight">
-                  <span id="pwIncorrect">Password is incorrect </span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="element">
-            <div class="element">
-              <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>Enhancing Appointment Management for BookYourPet SaaS Platform
-                </strong></h3>
-              <h4>I led the redesign of the appointment details screen for a pet booking app, aiming to improve usability, streamline management, and enhance efficiency. Using user interviews, usability testing, and data analysis, we identified key areas for improvement: easier navigation, better visibility of pet and client info, and efficient appointment adjustments. The redesigned screen features simplified navigation, enhanced visual hierarchy, and quick-access management tools, resulting in a 30% increase in user satisfaction and a 40% reduction in time spent managing appointments. This case study highlights my ability to solve complex usability issues and deliver impactful design solutions.
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
-</div>
-      </div> -->
-
-      
-
       <div class="Grid Grid--gutters Grid--cols-2">
 
-
-        <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
-    <a class="no-hover-effect">
-      <div class="">
-        <div class="img__wrap">
-          <img class="img__img" alt="Mastering B2B SaaS Subscription Success" src="/projectImages/Cover_BYP_AppB2B.png" />
-          <div class="img__description">
-            <div class="input-field">
-              <div class="column">
-                <label for="onboardingSubscription">
-                  <h5>Password</h5>
-                </label>
-
-                <div class="pwContainer">
-                  <input class="PWinput psJS" type="password" id="onboardingSubscription" placeholder="Enter password">
-                  <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="Mastering B2B SaaS Subscription Success">
-                  </button>
-                </div>
-                <div class="pwIncorrectHeight">
-                  <span id="pwIncorrect">Password is incorrect </span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="element">
-            <div class="element">
-              <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>Mastering B2B SaaS Subscription Success
-                </strong></h3>
-              <h4>This case study delves into the strategic enhancements made to the onboarding process of a B2B SaaS platform, aimed at simplifying user experience and boosting subscription rates. It explores the challenges faced, the solutions implemented, and the significant impact these changes had on user satisfaction and conversion rates, ultimately driving subscription success in a competitive market.
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
+        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder BYP paddingNone marginXS">
+  <a class="no-hover-effect" href="/byp_b2b_subscription">
+    <img src="/projectImages/Cover_BYP_AppB2B.png" alt="Mastering B2B SaaS Subscription Success">
+    <div class="element">
+      <h3 class="arrCard"><strong>Mastering B2B SaaS Subscription Success</strong></h3>
+      <h4>This case study delves into the strategic enhancements made to the onboarding process of a B2B SaaS platform, aimed at simplifying user experience and boosting subscription rates. It explores the challenges faced, the solutions implemented, and the significant impact these changes had on user satisfaction and conversion rates, ultimately driving subscription success in a competitive market.
+      </h4>
+    </div>
+  </a>
 </div>
-        <div class="Grid-cell cardBottomBorder BYP float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
-    <a class="no-hover-effect">
-      <div class="">
-        <div class="img__wrap">
-          <img class="img__img" alt="B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service" src="/projectImages/Cover_BYP_AppB2B_Redesign.png" />
-          <div class="img__description">
-            <div class="input-field">
-              <div class="column">
-                <label for="b2bAppRedesign">
-                  <h5>Password</h5>
-                </label>
 
-                <div class="pwContainer">
-                  <input class="PWinput psJS" type="password" id="b2bAppRedesign" placeholder="Enter password">
-                  <button class="passwordArr" type="submit">
-                    <img src="/icon/arrow-forward.svg" width="908" height="504" alt="B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service">
-                  </button>
-                </div>
-                <div class="pwIncorrectHeight">
-                  <span id="pwIncorrect">Password is incorrect </span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="element">
-            <div class="element">
-              <h5>Password is required</h5>
-              <h3 class="arrCard"><strong>B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service
-                </strong></h3>
-              <h4>Discover how we transformed the pet booking app with a strategic redesign, shifting from a white-glove service to a user-friendly self-service platform. This overhaul focused on enhancing key features, resulting in a significant 45% increase in user satisfaction and a more streamlined experience for pet owners. Join us on our journey to revolutionize pet care services with a seamless and intuitive booking experience.
-      
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
+        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder BYP paddingNone marginXS">
+  <a class="no-hover-effect" href="/byp_b2b_SaaS">
+    <img src="/projectImages/Cover_BYP_AppB2B_Redesign.png" alt="B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service">
+    <div class="element">
+      <h3 class="arrCard"><strong>B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service</strong></h3>
+      <h4>Discover how we transformed the pet booking app with a strategic redesign, shifting from a white-glove service to a user-friendly self-service platform. This overhaul focused on enhancing key features, resulting in a significant 45% increase in user satisfaction and a more streamlined experience for pet owners. Join us on our journey to revolutionize pet care services with a seamless and intuitive booking experience.
+      </h4>
+    </div>
+  </a>
 </div>
       </div>
 
@@ -743,13 +645,13 @@
 
                   <li class="progress__item progress__item--active" data-aos="fade-up">
                     <h3> <strong>Web Implementation & <a href="/design_system" class="textUnderline" title="Academic Projects">Design System Management</a> </strong> </h3>
-                    <h3>Since 2020, I have been designing, implementing, and maintaining my website. I've learned a lot during this process, including managing a design system with HTML/CSS/JS/EJS, analyzing website traffic with tools like Posthog and Google Analytics, and even gaining some SEO knowledge.
+                    <h3>Since 2020, I have been designing, implementing, and maintaining my website. During this process, I have learned a lot, including managing a design system with HTML, CSS, JS, and EJS. I continuously improve my <a class="textUnderline" href="javascript-learning">JavaScript</a> knowledge, monitor site traffic with tools like Posthog and Google Analytics, and have even gained some SEO knowledge.
                     </h3>
                     <div class="blankHXS"></div>
 
                   <li class="progress__item progress__item--active" data-aos="fade-up">
                     <h3> <strong>User Experience Design</strong> </h3>
-                    <h3>I love UX because it empowers users in the design process. My goal is always to solve problems through feedback and data analysis. The short design and development cycle in UX turns all my design dreams into reality.
+                    <h3>I love UX because it empowers users in the design process. My goal is always to solve problems through feedback and data analysis. The short design and development cycle in UX turns all design dreams into reality.
 
 
 
