--- a/html/index.html
+++ b/html/index.html
@@ -169,20 +169,20 @@
       <div class="backgroundColorNav">
         <a href="/"><img class="logo pointer" src="/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
         <div class="navbar">
-          <ul class="nav-menu">
-            <li class="nav-item marginZero active activeNav">
-                <a href="#projects" class="nav-link box">PROJECTS</a>
+          <ol class="nav-menu">
+            <li class="nav-item active activeNav box">
+                <a href="#projects" class="nav-link">PROJECTS</a>
               </li>
-            <li class="nav-item marginZero active activeNav">
-              <a href="#experiments" class="nav-link box">EXPERIMENTS</a>
+            <li class="nav-item active activeNav box">
+              <a href="#experiments" class="nav-link ">EXPERIMENTS</a>
             </li>
-            <li class="nav-item marginZero active activeNav">
-                <a href="#design_system" class="nav-link box">DESIGN SYSTEM</a>
+            <li class="nav-item active activeNav box">
+                <a href="#design_system" class="nav-link ">DESIGN SYSTEM</a>
               </li>
-            <li class="nav-item marginZero active activeNav">
-              <a href="#about" class="nav-link box">ABOUT</a>
+            <li class="nav-item active activeNav box">
+              <a href="#about" class="nav-link ">ABOUT</a>
             </li>
-          </ul>
+          </ol>
         </div>
         <div class="hamburger">
           <span class="bar"></span>
