--- a/html/index.html
+++ b/html/index.html
@@ -10,9 +10,9 @@
   <link rel="canonical" href="https://vickywang.me/">
 
   <title>
-    Creative UX Designer Focused on Streamlining Workflows - Vicky Wang
+    Vicky W. | UX Designer
   </title>
-  <meta name="title" content="Creative UX Designer Focused on Streamlining Workflows - Vicky Wang">
+  <meta name="title" content="Vicky W. | UX Designer">
   <meta name="author" content="Vicky W.">
   <meta name="description" content="Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.">
 
@@ -22,7 +22,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Creative UX Designer Focused on Streamlining Workflows - Vicky Wang">
+  <meta property="og:title" content="Vicky W. | UX Designer">
   <meta property="og:" content="Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
@@ -31,7 +31,7 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
-  <meta property="twitter:title" content="Creative UX Designer Focused on Streamlining Workflows - Vicky Wang">
+  <meta property="twitter:title" content="Vicky W. | UX Designer">
   <meta property="twitter:description" content="Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
@@ -219,11 +219,11 @@
               </strong>
             </div>
           </div>
-          <div class="paddingleft">
+          <div class="paddingL fitContenteft">
             <div class="element">
               <div class="widthFitContent">
                 <div class="dropdownSM">
-                  <img title="Share" class="iconS hoverGrey300 paddingM borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
+                  <img title="Share" class="iconS hoverGrey300 paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
                   <div class="dropdownSM-content">
                     <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
                       on LinkedIn</a>
@@ -241,7 +241,7 @@
       <div class="Grid-cell">
         <div class="ClipboardBoxIconOnly">
           <button class="ClipboardIconOnly">
-            <img title="Copy Email to Clipboard" class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
+            <img title="Copy Email to Clipboard" class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
             <p class="clickIconCopy">vickyw.design@gmail.com</p>
           </button>
         </div>
@@ -249,18 +249,18 @@
       </div>
       <div class="Grid-cell">
         <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-          <img class="iconM hoverGrey300 paddingMax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
+          <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
         </a>
       </div>
 
       <div class="Grid-cell">
         <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
-          <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
+          <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
         </a>
       </div>
       <div class="Grid-cell">
         <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
-          <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+          <img class="iconM hoverGrey300 paddingM fitContentax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
         </a>
       </div>
       <div class="Grid-cell">
@@ -318,6 +318,22 @@
     <div class="blankHXS"></div>
 
     <div class="wrapper">
+      <div class="Grid Grid--gutters Grid--cols-2">
+
+        <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder BYP paddingNone marginXS">
+  <a class="no-hover-effect" href="/byp_b2c_booking">
+    <img src="/projectImages/Cover_b2c_booking.png" alt="Optimizing Consumer-Facing Pet Service Bookings and Enhancing the Appointment Experience ">
+    <div class="element">
+      <h3 class="arrCard"><strong>Optimizing Consumer-Facing Pet Service Bookings and Enhancing the Appointment Experience </strong></h3>
+      <h4>In this UX case study, we optimized the consumer-facing booking flow for pet services on the BookYourPet platform. The goal was to streamline the process, automate business operations, and boost sales and customer satisfaction. Key metrics included a 25% increase in add-on sales, a 30% reduction in booking time, and 20% fewer clicks to complete a booking, significantly enhancing the user experience and operational efficiency.
+
+
+      </h4>
+    </div>
+  </a>
+</div>
+
+      </div>
       <div class="Grid Grid--gutters Grid--cols-2">
 
         <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder BYP paddingNone marginXS">
@@ -585,7 +601,7 @@
               </button></a>
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly">
-                <img class="iconM hoverGrey100 paddingMax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
+                <img class="iconM hoverGrey100 paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
                 <p class="clickIconCopy">vickyw.design@gmail.com
                 </p>
               </button>
@@ -845,20 +861,20 @@
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconM hoverGrey300 paddingS borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
+                  <img title="Copy Email Address to Clipboard" class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
               <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconM hoverGrey300 paddingS borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
+                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
               </a>
 
               <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconM hoverGrey300 paddingS borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
+                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
               </a>
 
               <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconM hoverGrey300 paddingS borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
+                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
               </a>
 
             </div>
