--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -265,11 +265,11 @@
           </div>
         </div>
         
-        <div class="paddingleft">
+        <div class="paddingL fitContenteft">
           <div class="element">
             <div class="widthFitContent">
               <div class="dropdownSM">
-                <img title="Share" class="iconS hoverGrey300 paddingM borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
+                <img title="Share" class="iconS hoverGrey300 paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
                 <div class="dropdownSM-content">
                   <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
                     on LinkedIn</a>
@@ -304,7 +304,7 @@
       <div class="element">
         <div class="ClipboardBoxIconOnly">
           <button class="ClipboardIconOnly">
-            <img class="iconM hoverGrey100 paddingMax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
+            <img class="iconM hoverGrey100 paddingM fitContentax borderRadiusMax" title="Copy Email Address to Clipboard" src="/icon/copy.svg">
             <p class="clickIconCopy">vickyw.design@gmail.com
             </p>
           </button>
@@ -674,20 +674,20 @@
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconM hoverGrey300 paddingS borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
+                  <img title="Copy Email Address to Clipboard" class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
               <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconM hoverGrey300 paddingS borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
+                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
               </a>
 
               <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconM hoverGrey300 paddingS borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
+                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
               </a>
 
               <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconM hoverGrey300 paddingS borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
+                <img class="iconM hoverGrey300 paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
               </a>
 
             </div>
