--- a/html/index.html
+++ b/html/index.html
@@ -325,7 +325,14 @@
     <img src="/projectImages/Cover_b2c_booking.png" alt="Optimizing Consumer-Facing Pet Service Bookings and Enhancing the Appointment Experience ">
     <div class="element">
       <h3 class="arrCard"><strong>Optimizing Consumer-Facing Pet Service Bookings and Enhancing the Appointment Experience </strong></h3>
-      <h4>In this UX case study, we optimized the consumer-facing booking flow for pet services on the BookYourPet platform. The goal was to streamline the process, automate business operations, and boost sales and customer satisfaction. Key metrics included a 25% increase in add-on sales, a 30% reduction in booking time, and 20% fewer clicks to complete a booking, significantly enhancing the user experience and operational efficiency.
+      <h4>In this UX case study, we optimized the booking flow for pet services on the BookYourPet platform. Our redesign led to a 169% increase in booking conversions, a 48% decrease in booking time, a 67% reduction in booking abandonment, a 124% increase in repeat bookings, and a 73% rise in add-on sales. These improvements streamlined the process, enhanced user experience, and boosted business efficiency.
+
+
+
+
+
+
+
 
 
       </h4>
