--- a/html/index.html
+++ b/html/index.html
@@ -43,20 +43,20 @@
   <link rel="manifest" href="/site.webmanifest">
 
 
+  <!-- =================== FONT Starts====================== -->
+
 
   <!-- Google Font Preconnect-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Google Font Preconnect-->
 
-  <!--sitewide font-family: 'Slackside One', sans-serif;  | use for note-->
-  <link href="https://fonts.googleapis.com/css2?family=Slackside+One&display=swap" rel="stylesheet">
-  <!--sitewide font-family: 'Slackside One', sans-serif;  | use for note-->
-
-
-
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz,wght@16..144,100..700&display=swap" rel="stylesheet">
+
+
   <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!--handwriting -  font-family: 'Caveat', sans-serif; -->
   <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
@@ -66,6 +66,10 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
   <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
+
+  <!-- =================== FONT Ends====================== -->
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
@@ -214,7 +218,7 @@
             <div class="element">
               <strong>
                 <div class="intro aos-init aos-animate" data-aos="fade-up">
-                  <h1> I'm a UX Designer passionate about creating simple, smooth and engaging experiences. </h1>
+                  <h1 class="font-test"> I'm a UX Designer passionate about creating simple, smooth and engaging experiences. </h1>
                 </div>
               </strong>
             </div>
