--- a/html/architecture/recreation_commons/index.html
+++ b/html/architecture/recreation_commons/index.html
@@ -756,7 +756,7 @@
                 <a href="/refining_rx_zero/">
                   <h6 class="fontWeight400"> RX Zero</h6>
                 </a>
-                <h6>The Evolution of LASO Local & Telehealth to RX Zero</h6>
+                <h6>Transforming Local and Telehealth Services into RX Zero</h6>
 
 
                 <div class="blankHXXS"></div>
