--- a/html/index.html
+++ b/html/index.html
@@ -288,7 +288,7 @@
 
 
     <div class="Grid Grid--gutters Grid--cols-3">
-      <a href="/resume" target="_blank"> <button class="buttonLanding arrButtonResume">Resume &nbsp;
+      <a href="/resume"> <button class="buttonLanding arrButtonResume">Resume &nbsp;
         </button></a>
       <a href="#about"> <button class="buttonLanding arrButton">About me &nbsp;
         </button></a>
@@ -373,9 +373,9 @@
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder LASO paddingNone marginXS">
   <a class="no-hover-effect" href="/refining_rx_zero/">
-    <img src="/projectImages/Cover_LASO_RXZero.png" alt="Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero">
+    <img src="/projectImages/Cover_LASO_RXZero.png" alt="Shifting Focus: Transforming Local and Telehealth Services into RX Zero">
     <div class="element">
-      <h3 class="arrCard"><strong>Shifting Focus: The Evolution of LASO Local &amp; Telehealth to RX Zero</strong></h3>
+      <h3 class="arrCard"><strong>Shifting Focus: Transforming Local and Telehealth Services into RX Zero</strong></h3>
       <h4>This case study delves into LASO Health&#39;s strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.
       </h4>
     </div>
@@ -718,30 +718,30 @@
           <div class="element">
             <div class="element">
 
-              <h2 data-aos="fade-up"> <strong> Understanding Users and Products</strong> </h2>
-              <h3>In my view, a deep understanding of both business goals and user needs is fundamental to UX design. By prioritizing these aspects, I'm able to create immersive user experiences that truly resonate. This dual focus is crucial in ensuring that my design projects have a meaningful impact. It also aids in the planning and prioritization process, ensuring that we focus on what matters most.
-              </h3>
+              <h3 data-aos="fade-up"> <strong> Understanding Users and Products</strong> </h3>
+              <h4>In my view, a deep understanding of both business goals and user needs is fundamental to UX design. By prioritizing these aspects, I'm able to create immersive user experiences that truly resonate. This dual focus is crucial in ensuring that my design projects have a meaningful impact. It also aids in the planning and prioritization process, ensuring that we focus on what matters most.
+              </h4>
             </div>
           </div>
         </div>
         <div class="Grid-cell   cardBorderThick borderRadiusM  paddingNone marginXS">
           <div class="element">
             <div class="element">
-              <h2 data-aos="fade-up"> <strong> Building Strong Cross-Functional Partnerships </strong> </h2>
-              <h3>I transform ambiguous projects into articulated plans, ensuring cross-functional alignment throughout the process. By setting early deadlines and establishing feedback loops for each milestone, I encourage timely feedback and iterative improvement. Collaborating closely with various teams, I enhance both the value and validity of research, leading to more informed and impactful design decisions.
+              <h3 data-aos="fade-up"> <strong> Building Strong Cross-Functional Partnerships </strong> </h3>
+              <h4>I transform ambiguous projects into articulated plans, ensuring cross-functional alignment throughout the process. By setting early deadlines and establishing feedback loops for each milestone, I encourage timely feedback and iterative improvement. Collaborating closely with various teams, I enhance both the value and validity of research, leading to more informed and impactful design decisions.
 
-              </h3>
+              </h4>
             </div>
           </div>
         </div>
         <div class="Grid-cell   cardBorderThick borderRadiusM  paddingNone marginXS">
           <div class="element">
             <div class="element">
-              <h2 data-aos="fade-up"> <strong> Managing the Design Process </strong> </h2>
-              <h3>Throughout each phase of the design process, from planning research to iterating designs and delivering high-quality final products, my focus is on maintaining a feedback loop to continuously refine and improve the design. I ensure that each phase has a clear deadline to keep the project on track. By documenting each iteration and evaluating the strengths and weaknesses of each iteration, I aim to build a more effective and impactful design.
+              <h3 data-aos="fade-up"> <strong> Managing the Design Process </strong> </h3>
+              <h4>Throughout each phase of the design process, from planning research to iterating designs and delivering high-quality final products, my focus is on maintaining a feedback loop to continuously refine and improve the design. I ensure that each phase has a clear deadline to keep the project on track. By documenting each iteration and evaluating the strengths and weaknesses of each iteration, I aim to build a more effective and impactful design.
 
 
-              </h3>
+              </h4>
             </div>
 
           </div>
@@ -897,7 +897,7 @@
                 <a href="/refining_rx_zero/">
                   <h6 class="fontWeight400"> RX Zero</h6>
                 </a>
-                <h6>The Evolution of LASO Local & Telehealth to RX Zero</h6>
+                <h6>Transforming Local and Telehealth Services into RX Zero</h6>
 
 
                 <div class="blankHXXS"></div>
